Edit the composer.json for adding authors.

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,17 @@
   "support": {
     "email": "info@okulbilisim.com"
   },
+  "authors": [
+    {
+      "name": "Hüseyin Mert",
+      "role": "Developer"
+    },
+    {
+      "name": "Ali Bahşişoğlu",
+      "role": "Developer",
+      "email": "ali@bahsisoglu.com"
+    }
+  ],
   "autoload": {
     "psr-0": {
       "OkulBilisim\\DSpacePHPClient": "src/OkulBilisim/DSpacePHPClient/"
